--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-#ignoring files in node_modules folder
+#ignoring files in node_modules folder if present
 node_modules/
+
+#ignoring html/css linters
+
+.hintrc
+.stylelintrc.json
+
+#ignoring hint report folder produced by hint
+
+hint-report/
