add navigation menu for mobile version
1.Modified html markup and styling to add classes for mobile menu
2.Added eslint confiugration file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ node_modules/
 .stylelintrc.json
 
 #ignoring hint report folder produced by hint
-
 hint-report/
+
+#ignoring esLint linter files
+
+.eslintrc.json
